--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,7 +14,8 @@ JWT_EXPIRE=7d
 RAZORPAY_KEY_ID=rzp_test_SDAsk8dkDqLe1d
 RAZORPAY_KEY_SECRET=GZR6CaF21wlE9AS9plYjZcsZ
 
-# Meta WhatsApp Business API 
+# Meta WhatsApp Business API
 WHATSAPP_ACCESS_TOKEN=your-whatsapp-access-token
 WHATSAPP_PHONE_NUMBER_ID=your-phone-number-id
 WHATSAPP_API_VERSION=v18.0
+WHATSAPP_SUPPORT_NUMBER=Support: +91 9999999999
