--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
-    "react-chartjs-2": "^5.2.0",
+    "esbuild": "0.25.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
-    "redux": "^5.0.1",
-    "@reduxjs/toolkit": "^2.0.1",
-    "react-redux": "^9.0.4"
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.8"
+  },
+  "pnpm": {
+    "overrides": {
+      "esbuild": "0.25.0"
+    }
   }
 }
